--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Tiny Local AI</title>
+  <title>Tiny AI</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
